@@ -15,7 +15,7 @@ sub parser {
     my $html = creole_parse(<$fh>);
     return unless $html =~ /\S/;
     utf8::encode($html);
-    return $html if $opts->{raw};
+    return $html if { @{ $opts } }->{raw};
     return qq{<html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -38,7 +38,10 @@ Text::Markup::Creole - Creole parser for Text::Markup
 =head1 Synopsis
 
   my $html = Text::Markup->new->parse(file => 'file.creole');
-  my $raw  = Text::Markup->new->parse(file => 'file.creole', raw => 1);
+  my $raw  = Text::Markup->new->parse(
+      file    => 'file.creole',
+      options => [ raw => 1 ],
+  );
 
 =head1 Description
 
